test/e2e/fail_compile/ownership/move_after_move.cst
fn consume(value: str) {
    println(&value);
}

fn main() {
    let rendered: str = to_str(1);
    consume(rendered);
    consume(rendered);
}
